--- a/README.html
+++ b/README.html
@@ -552,7 +552,7 @@ print("Hello selection2.")
 </div>
 </div>
 <div class="paragraph">
-<p><span class="image"><a class="image" href="ipython.gif"><img src="ipython.gif" alt="Example screenshot" width="640"></a></span></p>
+<p><span class="image"><a class="image" href="https://raw.github.com/wiki/kanosuke/vimterm/ipython.gif"><img src="https://raw.github.com/wiki/kanosuke/vimterm/ipython.gif" alt="Example screenshot" width="640"></a></span></p>
 </div>
 </div>
 <div class="sect2">
@@ -578,7 +578,7 @@ print("Hello line.")
 </div>
 </div>
 <div class="paragraph">
-<p><span class="image"><a class="image" href="r.gif"><img src="r.gif" alt="Example screenshot" width="640"></a></span></p>
+<p><span class="image"><a class="image" href="https://raw.github.com/wiki/kanosuke/vimterm/r.gif"><img src="https://raw.github.com/wiki/kanosuke/vimterm/r.gif" alt="Example screenshot" width="640"></a></span></p>
 </div>
 </div>
 <div class="sect2">
@@ -604,7 +604,7 @@ echo "Hello line."
 </div>
 </div>
 <div class="paragraph">
-<p><span class="image"><a class="image" href="https://raw.github.com/wiki/kanosuke/vimterm/bash.gif"><img src="bash.gif!" alt="Example screenshot" width="640"></a></span></p>
+<p><span class="image"><a class="image" href="https://raw.github.com/wiki/kanosuke/vimterm/bash.gif"><img src="https://raw.github.com/wiki/kanosuke/vimterm/bash.gif" alt="Example screenshot" width="640"></a></span></p>
 </div>
 </div>
 </div>
@@ -612,7 +612,7 @@ echo "Hello line."
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-05-14 22:09:10 DST
+Last updated 2019-05-14 22:15:47 DST
 </div>
 </div>
 </body>
